--- a/javascript-I/index.html
+++ b/javascript-I/index.html
@@ -97,6 +97,8 @@
       </form>
   </section>
 
-    <script src="js/principal.js"></script>
+    <script src="js/calculoImc.js"></script>
+    <script src="js/form.js"></script>
+
 	</body>
 </html>
